--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,17 +14,19 @@
 		}
 	},
 	"rules": {
+		"indent": ["error", "tab"],
 		"newline-per-chained-call": ["error"],
+		"no-mixed-spaces-and-tabs": ["warn", "smart-tabs"],
+		"no-console": ["warn", { "allow": ["warn", "error"] }],
 		"no-undef": "off",
 		"no-unused-vars": "warn",
-		"no-console": ["warn", { "allow": ["warn", "error"] }],
-		"react/jsx-uses-react": "error",
-		"react/jsx-uses-vars": "error",
+		"react/jsx-closing-bracket-location": ["error", "line-aligned"],
+		"react/jsx-first-prop-new-line": ["error", "multiline-multiprop"],
 		"react/jsx-indent-props": ["error", "tab"],
 		"react/jsx-indent": ["error", "tab"],
-		"react/jsx-closing-bracket-location": ["error", "line-aligned"],
 		"react/jsx-max-props-per-line": ["error", { "maximum": 1 }],
-		"react/jsx-first-prop-new-line": ["error", "multiline-multiprop"]
+		"react/jsx-uses-react": "error",
+		"react/jsx-uses-vars": "error"
 	},
 	"plugins": ["react", "jsx-a11y"]
 }
